fix test